# tdnet-scrapping-app

./: .gitignore  HASH_ID_DOCUMENTATION.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_hash_consistency.py  test_hash_ids.py
.github/workflows/: ci.yml  publish.yml  tag-release.yml
tdnet/: __init__.py  cli.py  constants.py  models.py  parsing.py  services.py
tests/: __init__.py  debug_parsing.py  mock_empty_page.html  mock_tdnet_page.html  test_main.py
