[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdnet-scraper"
version = "0.1.0"
description = "Scrape Japanese TDnet disclosures with Pydantic models and a simple CLI."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "nrm176" }
]
keywords = ["TDnet", "scraping", "pydantic", "finance", "Japan"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "requests>=2.31,<3.0",
  "beautifulsoup4>=4.12,<5.0",
  "lxml>=5.2,<6.0",
  "pydantic>=2.12,<3.0",
]

[project.urls]
Homepage = "https://github.com/nrm176/tdnet-scrapping-app"
Repository = "https://github.com/nrm176/tdnet-scrapping-app"
Issues = "https://github.com/nrm176/tdnet-scrapping-app/issues"

[project.scripts]
tdnet = "tdnet.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tdnet*"]
